src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <label>Available Quantity</label>
        <summarizedField>Stock_Item__c.Available_Quantity__c</summarizedField>
        <summaryForeignKey>Stock_Item__c.Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Commissionable_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the product is commissionable</inlineHelpText>
        <label>Commissionable Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Centre_Code__c</fullName>
        <label>Cost Centre Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatched_Quantity__c</fullName>
        <label>Dispatched Quantity</label>
        <summarizedField>Stock_Item__c.Dispatched_Quantity__c</summarizedField>
        <summaryForeignKey>Stock_Item__c.Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Effective_Period__c</fullName>
        <formula>SUBSTITUTE(text(Valid_From_Date__c), &apos;-&apos;, &apos;/&apos;) + &quot; -- &quot; + SUBSTITUTE(text(Valid_To_Date__c), &apos;-&apos;, &apos;/&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GL_Account_Receivable_Number__c</fullName>
        <label>GL Account Receivable Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Rate_Plans__c</fullName>
        <label>No. of Rate Plans</label>
        <summaryForeignKey>Product_Rate_Plan__c.Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(TODAY() &gt;= Valid_From_Date__c &amp;&amp; (TODAY() &lt;= Valid_To_Date__c || ISBLANK(Valid_To_Date__c)), &quot;Active&quot;, IF(Valid_From_Date__c &gt; TODAY(), &quot;Future&quot; , &quot;Expired&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From_Date__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To_Date__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Invoice IT Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>VOD_Production_Team_Product</fullName>
        <filterScope>Queue</filterScope>
        <label>VOD Production Team</label>
        <queue>VOD_Production_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>InvoiceIT Product  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice IT Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>